--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "notionflow",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "Agent-agnostic workflow orchestrator for Notion",
   "type": "module",
-  "private": true,
   "scripts": {
-    "dev": "bun run src/cli.ts",
-    "notionflow": "bun run src/cli.ts",
-    "check": "tsc --noEmit"
+    "dev": "npx tsx src/cli.ts",
+    "notionflow": "npx tsx src/cli.ts",
+    "check": "tsc --noEmit",
+    "test": "vitest run",
+    "build": "bun build src/cli.ts --target=node --outdir=dist",
+    "publish:npm": "bun run build && npm publish"
   },
   "bin": {
-    "notionflow": "./src/cli.ts"
+    "notionflow": "./dist/cli.js"
   },
   "dependencies": {
+    "better-sqlite3": "^11.9.1",
     "citty": "^0.1.6",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.5",
@@ -20,8 +23,13 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.22",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^22.15.0",
     "drizzle-kit": "^0.31.4",
-    "typescript": "^5.9.2"
-  }
+    "tsx": "^4.19.4",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.1"
+  },
+  "author": "Kamal <https://github.com/Kamalnrf>",
+  "license": "MIT"
 }
