--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "notionflow": "./dist/cli.js"
   },
   "dependencies": {
-    "better-sqlite3": "^11.9.1",
+    "@libsql/client": "^0.15.0",
     "citty": "^0.1.6",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.5",
@@ -23,7 +23,6 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.15.0",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.19.4",
