--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "skipLibCheck": true,
     "noEmit": true
   },
-  "include": ["src/**/*.ts", "drizzle.config.ts"]
+  "include": ["src/**/*.ts", "e2e/**/*.ts", "drizzle.config.ts"]
 }
