--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .claude/settings.local.json
 .claude/**/settings.local.json
 .notionflow/
+tasks/
+ralf.sh
+ralf-once.sh
