--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ coverage
 *.lcov
 # logs
 logs
+e2e/artifacts/*
 _.log
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # dotenv environment variable files
@@ -30,6 +31,7 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .claude/settings.local.json
 .claude/**/settings.local.json
 .notionflow/
+.playground-tmp/
 tasks/
 ralf.sh
 ralf-once.sh
